syntax = "proto3";

package api;

option go_package = "github.com/axsh/portal-gun/api";

import "model.proto";

// import "github.com/golang/protobuf/ptypes/timestamp/timestamp.proto";

service VpnService {
  rpc Create(CreateVpnRequest) returns(CreateVpnReply){}
  rpc Destroy(DestroyVpnRequest) returns(DestroyVpnReply){}
}

message CreateVpnRequest {
  model.VpnDriver vpn_driver = 1;
}

message DestroyVpnRequest {
  model.VpnDriver vpn_driver = 1;
}

message CreateVpnReply {
  string vpn_name = 1;
}

message DestroyVpnReply {
  string vpn_name = 1;
}

service NicService {
  rpc Register(RegisterNicRequest) returns(RegisterNicReply){}
  rpc Deregister(DeregisterNicRequest) returns(DeregisterNicReply){}
}

message RegisterNicRequest {
  model.NetworkDriver network_driver = 1;
}

message DeregisterNicRequest {
  model.NetworkDriver network_driver = 1;
}

message RegisterNicReply {
  string interface_id = 1;
}

message DeregisterNicReply {
  string interface_id = 1;
}